--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "rxjs": "^6.6.3",
+    "socket.io-client": "^4.0.1",
     "sockjs-client": "~1.5.1",
     "stompjs": "~2.3.3",
     "styled-components": "^5.2.1",
