--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.10",
     "session": "^0.1.0",
+    "socket.io": "^4.0.1",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
