--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "sockjs-client": "~1.5.1",
     "stompjs": "~2.3.3",
     "styled-components": "^5.2.1",
-    "swiper": "^6.3.4"
+    "swiper": "^6.3.4",
+    "swr": "^0.5.6"
   },
   "scripts": {
     "start": "react-scripts start",
