--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.14.0",
     "react-id-swiper": "^4.0.0",
     "react-is": "^16.13.1",
+    "react-player": "^2.9.0",
     "react-pose": "^4.0.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
