--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-is": "^16.13.1",
     "react-player": "^2.9.0",
     "react-pose": "^4.0.10",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "rxjs": "^6.6.3",
