--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
     "prism-react-renderer": "^1.1.1",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.14.0",
@@ -23,9 +24,10 @@
     "react-is": "^16.13.1",
     "react-player": "^2.9.0",
     "react-pose": "^4.0.10",
-    "react-redux": "^7.1.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
+    "redux": "^4.1.1",
     "rxjs": "^6.6.3",
     "socket.io-client": "^4.0.1",
     "sockjs-client": "~1.5.1",
@@ -62,6 +64,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "redux-devtools": "^3.7.0"
   }
 }
