--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,13 @@
     "express-fileupload": "^1.1.7-alpha.3",
     "express-mysql-session": "^2.1.4",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.31",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.10",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "session": "^0.1.0",
     "socket.io": "^4.0.1",
     "uuid": "^8.1.0"
